logs/Slang/generated/hdlconv/hdlconvertor_p833.sv.log
name: hdlconvertor_p833
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:1:1: error: expected member
primitive latch (q, ena_, data);
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:4:1: error: expected member
table
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:7:5: error: expected member
    0 0 : ? : 0 ;
    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:8:5: error: expected member
    1 ? : ? : - ; // - = no change
    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:9:1: error: expected member
endtable
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:13:15: error: redefinition of 'q'
output q; reg q;
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:2:15: note: previous definition here
output q; reg q;
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:15:1: error: expected member
table
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:19:1: error: expected member
(01) 1 : ? : 1 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:20:1: error: expected member
(0?) 1 : 1 : 1 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:21:1: error: expected member
(0?) 0 : 0 : 0 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:23:1: error: expected member
(?0) ? : ? : - ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:25:1: error: expected member
?  (??) : ? : - ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p833.sv:26:1: error: expected member
endtable
^~~~~~~~
